	PR ld/12672 	* ldlang.c (enum open_bfd_mode): New. 	(open_input_bfds): Replace "force" param with "mode".  Reload 	archives for rescan.  Update all callers. 	(lang_process): Make another open_input_bfds pass for plugins.